<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorAccent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:text="@string/usage_header" />

    <TextView
        android:id="@+id/kpl"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Kilometers Per Liters: NA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mpg"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Miles Per Gallon: NA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/distance_header" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kilometers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/km_label"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/miles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/miles_label"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/fuel_header" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/liters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/liters_label"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gallons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/gallons_label"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>